syntax = "proto3";

option csharp_namespace = "Shared.Grpc";

service Auth {
  rpc VerifyToken (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  int32 userId = 2;
  string username = 3;
  string error = 4;
}
